Searching functionality added