@@ -1,14 +1,14 @@
 package com.github.saintukrainian.chatapp.service;
 
 import com.github.saintukrainian.chatapp.entity.ChatMessage;
-import com.github.saintukrainian.chatapp.entity.User;
-import com.github.saintukrainian.chatapp.model.ChatMessageDto;
-import com.github.saintukrainian.chatapp.model.UserDto;
+import com.github.saintukrainian.chatapp.entity.ChatMessageSimplified;
+import com.github.saintukrainian.chatapp.mapper.UserDtoMapper;
+import com.github.saintukrainian.chatapp.model.request.ChatMessageDto;
 import com.github.saintukrainian.chatapp.repository.ChatMessageRepository;
+import com.github.saintukrainian.chatapp.repository.ChatMessageSimplifiedRepository;
 import com.github.saintukrainian.chatapp.repository.ComplexChatMessageRepository;
 import com.github.saintukrainian.chatapp.utils.DatePopulater;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -20,7 +20,9 @@ import org.springframework.stereotype.Service;
 public class ChatMessageFacade {
 
   final ChatMessageRepository chatMessageRepository;
+  final ChatMessageSimplifiedRepository chatMessageSimplifiedRepository;
   final ComplexChatMessageRepository complexChatMessageRepository;
+  final UserDtoMapper userDtoMapper;
 
   public List<ChatMessageDto> findMessagesByChatId(Long chatId) {
     log.info("Finding chat messages by chat id: {}", chatId);
@@ -28,8 +30,8 @@ public class ChatMessageFacade {
         chatMessageRepository.findChatMessagesByChatChatIdOrderBySendTimestampAsc(chatId);
 
     return chatMessages.stream()
-        .map(ChatMessageFacade::mapToMessageDto)
-        .collect(Collectors.toList());
+        .map(this::mapToMessageDto)
+        .toList();
   }
 
   public void editMessage(ChatMessageDto message) {
@@ -46,26 +48,28 @@ public class ChatMessageFacade {
 
   public void saveChatMessage(ChatMessageDto messageDto) {
     log.info("Saving message: {}", messageDto);
+
     DatePopulater.populateWithTimestamp(messageDto);
-    complexChatMessageRepository.saveMessage(messageDto);
+
+    ChatMessageSimplified savedMessage = chatMessageSimplifiedRepository.save(
+        ChatMessageSimplified.builder()
+            .chatId(messageDto.getChatId())
+            .fromUserId(messageDto.getFromUser().getUserId())
+            .value(messageDto.getValue())
+            .sendTimestamp(messageDto.getSendTimestamp())
+            .build());
+
+    messageDto.setMessageId(savedMessage.getMessageId());
   }
 
-  private static ChatMessageDto mapToMessageDto(ChatMessage message) {
+  private ChatMessageDto mapToMessageDto(ChatMessage message) {
     return ChatMessageDto.builder()
         .chatId(message.getChat().getChatId())
         .edited(message.isEdited())
         .messageId(message.getMessageId())
         .sendTimestamp(message.getSendTimestamp())
         .value(message.getValue())
-        .fromUser(mapToUserDto(message.getFromUser()))
-        .build();
-  }
-
-  private static UserDto mapToUserDto(User user) {
-    return UserDto.builder()
-        .userId(user.getUserId())
-        .email(user.getEmail())
-        .username(user.getUsername())
+        .fromUser(userDtoMapper.mapToUserDto(message.getFromUser()))
         .build();
   }
 }
